allow to add comments, save comments in .sym file

--- a/bsnes/ui-qt/data/documentation.html
+++ b/bsnes/ui-qt/data/documentation.html
@@ -95,6 +95,9 @@ By clicking on the address bar in the main disassembly window, you can toggle a 
 can identify a breakpoint by its red background color.
 <p>
 
+You can add a comment to the disassembler by clicking in the comment section. All comments and symbols will be saved
+to the disk, if the "save symbols" option in the options window is activated.
+
 <h3>Debugger Menu: Tools</h3>
 <h4>Breakpoint Editor</h4><br>
 
