remove old bp range note from docs

--- a/bsnes/ui-qt/data/documentation.html
+++ b/bsnes/ui-qt/data/documentation.html
@@ -104,7 +104,7 @@ Breakpoints allow you to automatically pause execution when code at a given loca
 read or modified. Each breakpoint contains these fields:<p>
 
 <b>Address Range:</b> The address or range of addresses for the breakpoint to monitor. The second column represents the end 
-of an address range, and is optional. Note that address mirroring will be ignored if a range of multiple addresses is specified.<br>
+of an address range, and is optional.<br>
 <b>Data:</b> (optional) If this is specified, read and write breakpoints will only trigger if the byte being read from or written to
 the given address equals this value.<br>
 <b>R/W/X:</b> Specify any combination of read (R), write (W), and execute (X) operations that will trigger this breakpoint.<br>
