'vram viewer' was also renamed

--- a/bsnes/ui-qt/data/documentation.html
+++ b/bsnes/ui-qt/data/documentation.html
@@ -135,7 +135,7 @@ to be sure that a particular hardware register has the value that you expect.
 <p>
 
 <h3>Debugger Menu: S-PPU</h3>
-<h4>Video RAM viewer</h4><br>
+<h4>Tile viewer</h4><br>
 
 This window displays a graphical view of the current contents of VRAM.
 <p>
