v05rc1 release candidate until next week or so

--- a/bsnes/ui-qt/data/documentation.html
+++ b/bsnes/ui-qt/data/documentation.html
@@ -188,7 +188,7 @@ counter value based on the number of master clock cycles per scanline.
 
 <h3>Satellaview and BS-X Support</h3><br>
 
-As of version 073+3, bsnes-plus features extensive Satellaview and BS-X support.
+As of version 3, bsnes-plus features extensive Satellaview and BS-X support.
 <p>
 
 Before using the Satellaview, first make sure it is enabled as the expansion port device on the "Advanced" tab of the emulator 
@@ -235,6 +235,7 @@ This is a list of others who have contributed to bsnes-plus, either directly or 
 &bull; Andreas Naive<br>
 &bull; anomie<br>
 &bull; Benjamin Schulte<br>
+&bull; CypherSignal<br>
 &bull; David Lindecrantz<br>
 &bull; _Demo_<br>
 &bull; Derrick Sobodash<br>
@@ -255,6 +256,7 @@ This is a list of others who have contributed to bsnes-plus, either directly or 
 &bull; Nach<br>
 &bull; neviksti<br>
 &bull; Overload<br>
+&bull; Raphaël Assénat<br>
 &bull; RedDwarf<br>
 &bull; Richard Bannister<br>
 &bull; Shay Green<br>
